feat: 페이지네이션 적용, API 스펙변경 로직 적용(메타데이터 추가)